samples/_failures_safe/1761126466_13ed49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0dd06d8.c: In function ‘main’:
./samples/SAFE/__tmp_c0dd06d8.c:146:28: error: expected ‘)’ at end of input
  146 |         add_edge(&g, i, src
      |                 ~          ^
      |                            )
./samples/SAFE/__tmp_c0dd06d8.c:146:9: error: too few arguments to function ‘add_edge’
  146 |         add_edge(&g, i, src
      |         ^~~~~~~~
./samples/SAFE/__tmp_c0dd06d8.c:31:6: note: declared here
   31 | void add_edge(struct Graph *g, int idx, int src, int dest, int weight) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_c0dd06d8.c:146:9: error: expected declaration or statement at end of input
  146 |         add_edge(&g, i, src
      |         ^~~~~~~~
./samples/SAFE/__tmp_c0dd06d8.c:146:9: error: expected declaration or statement at end of input
